# libdnf-cpp-proof-of-concept

./: CMakeLists.txt
libdnf/repo/modularity/: CMakeLists.txt  FrontController.cpp  FrontController.hpp  IFrontController.cpp  IFrontController.hpp  ModularityAPI.cpp  ModularityAPI.hpp  main.cpp  mod
libdnf/repo/modularity/cluster/: CMakeLists.txt  ModuleClusterController.cpp  ModuleClusterController.hpp  ModuleClusterView.cpp  ModuleClusterView.hpp  ModuleMaker.cpp  ModuleMaker.hpp
libdnf/repo/modularity/module/: CMakeLists.txt  ModuleController.cpp  ModuleController.hpp
libdnf/repo/modularity/module/element/: CMakeLists.txt  IModuleElement.hpp  ModuleElement.cpp  ModuleElement.hpp  NullModuleElement.hpp
libdnf/repo/modularity/module/state/: CMakeLists.txt  DefaultModuleState.cpp  DefaultModuleState.hpp  EnabledModuleState.cpp  EnabledModuleState.hpp  IModuleState.cpp  IModuleState.hpp  InstalledModuleState.cpp  InstalledModuleState.hpp  LockedModuleState.cpp  LockedModuleState.hpp  ModuleContext.cpp  ModuleContext.hpp
libdnf/repo/modularity/module/view/: CMakeLists.txt  (+2 more)
libdnf/repo/modularity/modulemd/: CMakeLists.txt  ModuleMetadata.cpp  ModuleMetadata.hpp  ModuleMetadataUtil.cpp  ModuleMetadataUtil.hpp
libdnf/repo/swdb/: CMakeLists.txt  SWDB.cpp  SWDB.hpp  SWDBPrivate.cpp  SWDBPrivate.hpp
libdnf/repo/swdb/item/: CMakeLists.txt  Item.hpp  RPMItem.cpp  RPMItem.hpp  TransactionItem.cpp  TransactionItem.hpp
libdnf/repo/swdb/transaction/: CMakeLists.txt  ITransaction.hpp  ITransactionFactory.hpp  ReadOnlyTransaction.cpp  ReadOnlyTransaction.hpp  Transaction.hpp  TransactionFactory.cpp  TransactionFactory.hpp
(+16 files in other folders)
